--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 macroquad = "0.4.4"
 toml = {version = "0.8.8", features = ["preserve_order"]}
 slotmap = "1.0.7"
-glam = "0.24.2"
+glam = {version = "0.21.3", features = ["scalar-math"] }
