--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ macroquad = "0.4.4"
 toml = {version = "0.8.8", features = ["preserve_order"]}
 slotmap = "1.0.7"
 glam = {version = "0.21.3", features = ["scalar-math"] }
+parry2d = "0.13.5"
