--- a/assets/images.toml
+++ b/assets/images.toml
@@ -5,3 +5,5 @@ zombie_stand = "images/zombie_stand.png"
 guy_stand = "images/guy_stand.png"
 guy_walk1 = "images/guy_walk1.png"
 guy_walk2 = "images/guy_walk2.png"
+zombie_walk1 = "images/zombie_walk1.png"
+zombie_walk2 = "images/zombie_walk2.png"
