--- a/assets/images.toml
+++ b/assets/images.toml
@@ -8,3 +8,4 @@ guy_walk2 = "images/guy_walk2.png"
 zombie_walk1 = "images/zombie_walk1.png"
 zombie_walk2 = "images/zombie_walk2.png"
 zombie_dead1 = "images/zombie_dead1.png"
+pistol = "images/pistol.png"
