--- a/assets/weapons.toml
+++ b/assets/weapons.toml
@@ -1,11 +1,11 @@
 [fists]
-name = "Fists"
+display_name = "Fists"
 rate_of_fire = 1
 damage = [3,6]
 
 [pistol]
-name = "Pistol"
-images = ["pistol"]
+display_name = "Pistol"
+frames = ["pistol"]
 rate_of_fire = 3
 damage = [5,10]
 
