--- a/assets/images.toml
+++ b/assets/images.toml
@@ -9,3 +9,4 @@ zombie_walk1 = "images/zombie_walk1.png"
 zombie_walk2 = "images/zombie_walk2.png"
 zombie_dead1 = "images/zombie_dead1.png"
 pistol = "images/pistol.png"
+pistol_firing = "images/pistol_firing.png"
