--- a/assets/weapons.toml
+++ b/assets/weapons.toml
@@ -5,7 +5,7 @@ damage = [3,6]
 
 [pistol]
 display_name = "Pistol"
-frames = ["pistol"]
+frames = ["pistol", "pistol_firing"]
 rate_of_fire = 3
 damage = [5,10]
 
