--- a/assets/actors.toml
+++ b/assets/actors.toml
@@ -13,6 +13,7 @@ speed = 3.0
 radius = 0.5
 shootable = true
 health = 10
+offset = [0.0, -0.25]
 
 [enemy]
 extends = "creature"
@@ -39,6 +40,7 @@ health = 1
 solid = true
 radius = 0.0
 missile = true
+rotate_to_face = true
 
 [bullet]
 extends = "missile"
