--- a/assets/actors.toml
+++ b/assets/actors.toml
@@ -25,7 +25,7 @@ frames = ["guy_stand"]
 locomotion_frames = ["guy_walk1", "guy_walk2"]
 speed = 5.0
 health = 100
-weapon = "pistol"
+weapon = "rifle"
 
 [zombie]
 extends = "enemy"
