--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ slotmap = "1.0.7"
 glam = {version = "0.21.3", features = ["scalar-math"] }
 parry2d = "0.13.5"
 flat_spatial = "0.6.0"
+serde = {version = "1.0.193", features = ["derive"]}
