--- a/assets/images.toml
+++ b/assets/images.toml
@@ -10,3 +10,5 @@ zombie_walk2 = "images/zombie_walk2.png"
 zombie_dead1 = "images/zombie_dead1.png"
 pistol = "images/pistol.png"
 pistol_firing = "images/pistol_firing.png"
+machinegun = "images/machinegun.png"
+machinegun_firing = "images/machinegun_firing.png"
