--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ glam = {version = "0.21.3", features = ["scalar-math", "serde"] }
 parry2d = "0.13.5"
 flat_spatial = "0.6.0"
 serde = {version = "1.0.193", features = ["derive"]}
+bincode = "1.3.3"
