--- a/assets/images.toml
+++ b/assets/images.toml
@@ -12,3 +12,4 @@ pistol = "images/pistol.png"
 pistol_firing = "images/pistol_firing.png"
 machinegun = "images/machinegun.png"
 machinegun_firing = "images/machinegun_firing.png"
+fist = "images/fist.png"
