--- a/assets/images.toml
+++ b/assets/images.toml
@@ -1,5 +1,6 @@
 guy = "images/guy.png"
 bullet = "images/bullet.png"
+bullet_flipped = "images/bullet.png"
 spatter = "images/spatter.png"
 zombie_stand = "images/zombie_stand.png"
 guy_stand = "images/guy_stand.png"
