--- a/assets/images.toml
+++ b/assets/images.toml
@@ -1,6 +1,8 @@
 guy = "images/guy.png"
-bullet = "images/bullet.png"
-bullet_flipped = "images/bullet.png"
+bullet_1 = "images/bullet_1.png"
+bullet_2 = "images/bullet_2.png"
+bullet_3 = "images/bullet_3.png"
+bullet_4 = "images/bullet_4.png"
 spatter = "images/spatter.png"
 zombie_stand = "images/zombie_stand.png"
 guy_stand = "images/guy_stand.png"
